Changes in index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1>Welcome to CAFE ALBERO</h1>
-    <p>This is an application to promote a brand, CAFE ALBERO, and let its members manage branches in Australia</p>
+    <p>This is an application to promote an Australian cafe brand, CAFE ALBERO, and let its members to manage all branches in Australia</p>
   <a href="home">Visit the website</a>
   </body>
 </html>
