Changes in index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
   <body>
     <h1>Welcome to CAFE ALBERO</h1>
     <p>This is an application to promote an Australian cafe brand, CAFE ALBERO, and let its members to manage all branches in Australia</p>
+    <h2>Please click Branches page under Membership link in navigation to see all the directories of CAFE ALBERO</h2>
   <a href="home">Visit the website</a>
   </body>
 </html>
