Changes in index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,16 @@
       body {
         font-family: arial;
       }
+      p#alert {
+        color: red;
+      }
     </style>
   </head>
   <body>
     <h1>Welcome to CAFE ALBERO</h1>
-    <p>This is an application to promote an Australian cafe brand, CAFE ALBERO, and let its members to manage all branches in Australia</p>
-    <h2>Please click Branches page under Membership link in navigation to see all the directories of CAFE ALBERO</h2>
+    <h3>This is an application to promote an Australian cafe brand, CAFE ALBERO, and let its members to manage all branches in Australia</h3>
+    <br>
+    <p id="alert"><em>Please click Branches under Membership link in navigation to see all the business directories of CAFE ALBERO</em></p>
   <a href="home">Visit the website</a>
   </body>
 </html>
