--- a/views/branches.ejs
+++ b/views/branches.ejs
@@ -19,9 +19,8 @@
         <h1><%= title %></h1>
         <div>
         <a href="branches/manage_directory" class="manage_link">Manage Directory</a>&nbsp;&nbsp;&nbsp;
-        <a href="/auth/login" class="manage_link">Member Login / Register</a>
-            <input id="searchbar" placeholder="Search a branch">
-            <button>Search</button>
+        <a href="/auth/login" class="manage_link">Member Login / Register</a>&nbsp;&nbsp;&nbsp;
+        <a href="http://localhost:3000/images/upload">Upload Logo</a>
         </div>
         <table>
             <thead>
