--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>CAFE ALBERO</title>
     <link rel="stylesheet" href="stylesheets/styles.css" />
+    <!--image slider styles-->
     <style>
         /* jssor slider bullet navigator skin 05 css */
         /*
@@ -65,6 +66,7 @@
             <img src="images/cafe_albero/logo.png" id="logo" />
             <span>ALBERO</span>
         </div>
+        <!--mega navigation-->
         <nav role="navigation" class="clearfix">
             <ul id="mainnav">
                 <li>
