--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -4,6 +4,10 @@
     <div class="container container_resize container_margin">
         <h1>Login</h1>
         <a href="register" class="manage_link">Register</a>
+        <!--invalid login message-->
+        <% if (messages.length > 0) { %>
+        <div id="login_message"><%= messages %></div>
+        <% } %>
         <!--login form-->
         <form method="post" action="/auth/login">
             <div>
