--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,14 @@
 <!--main footer for every page-->
 </div>
+<!--jQuery CDN-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<!--script for delete confirmation-->
 <script type="text/javascript" src="../javascripts/scripts.js"></script>
+<!--scripts for image slider-->
 <script type="text/javascript" src="../javascripts/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="../javascripts/jssor.slider.mini.js"></script>
 <script type="text/javascript" src="../javascripts/slider.js"></script>
+<!--script for Google Map API -->
 <script src="http://maps.googleapis.com/maps/api/js"></script>
 <script>
     function initialize() {
